--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "제2회 코너톤 3팀 백엔드 레포",
   "main": "app.js",
   "scripts": {
-    "start": "nodemon app",
+    "start": "nodemon server",
     "test": "jest --runInBand --detectOpenHandles "
   },
   "author": "",
